--- a/movebetter/index.html
+++ b/movebetter/index.html
@@ -37,7 +37,7 @@
 <p>Saturday, June 28th</p>
 <p>Sunday, June 29th</p>
 <h2 id="-availability-will-be-updated-here-http-www-tina-michelle-com-availability-"><strong>AVAILABILITY WILL BE UPDATED <a href="http://www.tina-michelle.com/availability">HERE</a>.</strong></h2>
-<p>Please contact me directly at tina-michelle@moveyouraxis.com with your preferred time and location.  <strong><em>On-site screenings must be reserved by Sunday, June 22nd.  Online screenings must be reserved by Tuesday, June 24th.</em></strong>  First-come, first-serve.  Tell your friends and family too so you can all take advantage of the special pricing.  Here is the link to <a href="http://www.tina-michelle.com/movebetter">share</a>. </p>
+<p>Please contact me directly at tina-michelle@moveyouraxis.com with your preferred time and location.  <strong><em>On-site screenings must be reserved by Sunday, June 22nd.  Online screenings must be reserved by Tuesday, June 24th.</em></strong>  First-come, first-serve.  Tell your friends and family too so you can all take advantage.  Here is the link to <a href="http://www.tina-michelle.com/movebetter">share</a>. </p>
 <hr>
 <p><u></u></p><h1 style="font-weight:900;"><u>“MOVE BETTER” PROGRAM</u></h1><p></p>
 <h4 id="-3-on-site-semi-private-sessions-2-5-people-120-per-person-40-per-session-"><strong>3 ON-SITE SEMI-PRIVATE SESSIONS (2 – 5 people): $120 per person ($40 per session)</strong></h4>
