--- a/movebetter/index.html
+++ b/movebetter/index.html
@@ -26,10 +26,10 @@
 <p>4.) One 3 – 5 foot long string</p>
 <p>5.) One large towel</p>
 <p><u><b>AVAILABILITY (ON-SITE):</b></u></p>
-<h4 id="-__saturday-june-28th-at-mueller-1311-philomena-street-austin-tx-78723-__-"><em><strong>Saturday, June 28th at Mueller (1311 Philomena Street, Austin, TX 78723)</strong></em></h4>
+<h4 id="-__saturday-june-28th-at-mueller-1311-philomena-street-austin-tx-78723-__-"><strong><strong>Saturday, June 28th at Mueller (1311 Philomena Street, Austin, TX 78723)</strong></strong></h4>
 <p>8:00 - 9:30 a.m.</p>
 <p>12:00 - 12:30 p.m.</p>
-<h4 id="-__sunday-june-29th-at-pease-park-1100-kingsbury-street-austin-tx-78705-__-"><em><strong>Sunday, June 29th at Pease Park (1100 Kingsbury Street, Austin, TX 78705)</strong></em></h4>
+<h4 id="-__sunday-june-29th-at-pease-park-1100-kingsbury-street-austin-tx-78705-__-"><strong><strong>Sunday, June 29th at Pease Park (1100 Kingsbury Street, Austin, TX 78705)</strong></strong></h4>
 <p>9:00 - 11:00 a.m.</p>
 <p>3:00 - 4:00 p.m.</p>
 <p><u><b>AVAILABILITY (ONLINE):</b></u></p>
