--- a/movebetter/index.html
+++ b/movebetter/index.html
@@ -10,7 +10,7 @@
 <p><strong><em>•    What if the reason I have trouble with changing directions suddenly is because I have limited range of motion in my upper back or my ankle?</em></strong></p>
 <p><strong><em>•    Is there such thing as being too flexible?</em></strong></p>
 <p><strong><em>•    I’d like to execute a flawless pivot turn or keep up with everyone else on the basketball court.</em></strong></p>
-<p>The list of questions could go on and on.  The point is, it’s really for everybody - whether you are a dancer, triathlete, or someone who has never been able to touch his or her toes.  </p>
+<p>The list of questions could go on and on.  The point is, everybody could use a movement screen - whether you are a dancer, triathlete, or someone who has never been able to touch his or her toes.  </p>
 <p>Part of what I offer in my <a href="http://www.tina-michelle.com">personal training sessions</a> is a movement screen to help identify weaknesses, imbalances, asymmetries, and limitations.  For a limited time, I am offering a special.</p>
 <hr>
 <p>Here’s how it will work:</p>
