--- a/movebetter/index.html
+++ b/movebetter/index.html
@@ -40,19 +40,19 @@
 <p>Please contact me directly at tina-michelle@moveyouraxis.com with your preferred time and location.  <strong><em>On-site screenings must be reserved by Sunday, June 22nd.  Online screenings must be reserved by Tuesday, June 24th.</em></strong>  First-come, first-served.  Tell your friends and family too so you can all take advantage.  Here is the link to <a href="http://www.tina-michelle.com/movebetter">share</a>. </p>
 <hr>
 <p><u></u></p><h1 style="font-weight:900;"><u>MOVE BETTER PROGRAM</u></h1><p></p>
-<h4 id="-3-on-site-semi-private-sessions-2-5-people-120-per-person-40-per-session-"><strong>3 ON-SITE SEMI-PRIVATE SESSIONS (2 – 5 people): $120 per person ($40 per session)</strong></h4>
-<h4 id="__-3-online-one-on-one-sessions-90-per-person-30-per-session-__"><strong>*3 ONLINE ONE-ON-ONE SESSIONS: $90 per person ($30 per session)</strong></h4>
-<h4 id="__-1-online-one-on-one-session-40__"><strong>*1 ONLINE ONE-ON-ONE SESSION: $40</strong></h4>
+<h4 id="-3-on-site-semi-private-sessions-2-5-people-120-per-person-40-per-session-"><strong>3 On-site semi-private sessions (2 - 5 people): $120 per person ($40 per session)</strong></h4>
+<h4 id="__-3-online-one-on-one-sessions-90-per-person-30-per-session-__"><strong>*3 Online one-on-one sessions: $90 per person ($30 per session)</strong></h4>
+<h4 id="__-1-online-one-on-one-session-40__"><strong>*1 Online one-on-one session: $40</strong></h4>
 <p><strong><em>*Note: For those who wish to train online, please indicate whether you have access to any of the following equipment: foam roller, tennis or lacrosse ball, theraband, the stick, stability ball, medicine ball (weight?), dumbbell (weight?), kettlebell (weight?).  <u>This equipment is not required.</u></em></strong></p>
 <p><strong><em>*Note: For those who wish to train on-site and do not yet have a group in mind, please indicate this, along with your preferred times and locations.  Select as many times and locations as you can and I’ll do my best to coordinate schedules.</em></strong></p>
 <p><u><b>AVAILABILITY (ON-SITE):</b></u></p>
 <h4 id="flamencura-music-dance-7113-burnet-road-111-austin-tx-78757-">Flamencura Music &amp; Dance (7113 Burnet Road, #111 Austin, TX 78757)</h4>
-<p>Saturdays from 8:15 – 9:15 a.m. (July 12th, 19th, 26th)</p>
-<p>Sundays from 10 – 11 a.m. (July 13th, 20th, 27th)</p>
+<p>Saturdays from 8:15 – 9:15 a.m. (July 12th, 19th, and 26th)</p>
+<p>Sundays from 10 – 11 a.m. (July 13th, 20th, and 27th)</p>
 <h4 id="pease-park-1100-kingsbury-street-austin-tx-78705-">Pease Park (1100 Kingsbury Street, Austin, TX 78705)</h4>
-<p>Thursdays from 6:15 – 7:15 p.m. (July 10th, 17th, 24th)</p>
-<p>Saturdays from 8:15 – 9:15 a.m. (July 12th, 19th, 26th)</p>
-<p>Sundays from 10 – 11 a.m. (July 13th, 20th, 27th)</p>
+<p>Thursdays from 6:15 – 7:15 p.m. (July 10th, 17th, and 24th)</p>
+<p>Saturdays from 8:15 – 9:15 a.m. (July 12th, 19th, and 26th)</p>
+<p>Sundays from 10 – 11 a.m. (July 13th, 20th, and 27th)</p>
 <p><u><b>AVAILABILITY (ON-LINE):</b></u></p>
 <h4 id="thursday-july-10th-sunday-july-27th-">Thursday, July 10th - Sunday, July 27th.</h4>
 <h2 id="-availability-will-be-updated-here-http-www-tina-michelle-com-availability-"><strong>AVAILABILITY WILL BE UPDATED <a href="http://www.tina-michelle.com/availability">HERE</a>.</strong></h2>
