--- a/moveyouraxisannouncement/index.html
+++ b/moveyouraxisannouncement/index.html
@@ -3,8 +3,8 @@
 <body>
 <h2 id="-announcement-regarding-move-your-axis-and-private-dance-instruction-"><strong>ANNOUNCEMENT REGARDING MOVE YOUR AXIS AND PRIVATE DANCE INSTRUCTION</strong></h2>
 <p>Move Your Axis and private dance instruction need to stay on hold until further notice.  It is entirely possible that this will become permanent.  </p>
-<p>For those of you who were unaware, I was hit by a truck last summer while I was out running and sustained head to toe injuries.  After taking a financial break, I am back to visiting with my doctors again.  We are only able to address two injuries at a time, so Right Shoulder and Right Knee volunteered.  </p>
-<p>It appears that I have a labral tear (in my shoulder) and a meniscus tear (in my knee).  We are in the process of determining the next steps.  One way or another, the recovery process for both types of injuries will take some time.  Since the only body part spared was my right foot, this is going to be quite a process as we work our way down the list.  </p>
+<p>For those of you who were unaware, I was hit by a truck last summer while I was out running and sustained head to toe injuries.  After taking a financial break, I am back to visiting with my doctors again.  </p>
+<p>Unfortunately, we are only able to address two body parts at a time.  Since my right foot was the only part spared, Recovery Road is looking to be pretty long and intense.</p>
 <p>I will provide an update once things become more clear.  For now, I will offer a <a href="http://tina-michelle.com/movebetter">special program</a> for anyone interested. </p>
 <p>If I don’t have the opportunity to talk with you before the holiday, Happy 4th of July!</p>
 </body>
