--- a/announcement/index.html
+++ b/announcement/index.html
@@ -4,8 +4,8 @@
 <h2 id="-announcement-"><strong>ANNOUNCEMENT</strong></h2>
 <p>Move Your Axis and private dance instruction need to stay on hold until further notice.  At this point, it is entirely possible that this will become permanent.</p>
 <p>For those of you who were unaware, I was hit by a truck last summer while I was out running and sustained head to toe injuries.  After taking a financial break, I am back to visiting with my doctors again.  </p>
-<p>Unfortunately, we are only able to address two body parts at a time.  Recovery Road is looking to be pretty long and intense since my right foot was the only spared body part.  We’re currently determining the direction for my right shoulder and knee.</p>
-<p>I will provide an update once things become more clear.  For now, I will offer a <a href="http://tina-michelle.com/movebetter">special program</a> for anyone interested. </p>
+<p>Unfortunately, we are only able to address two body parts at a time.  Recovery Road is looking to be pretty long and intense since my right foot was the only spared body part.  </p>
+<p>I will provide an update once things become more clear.  </p>
 <p>If I don’t have the opportunity to talk with you before the holiday, Happy 4th of July!</p>
 </body>
 </html>
