--- a/announcement/index.html
+++ b/announcement/index.html
@@ -2,10 +2,10 @@
 <head><title>Announcement</title><link rel="stylesheet" type="text/css" href="https://raw.github.com/coreybutler/site-tm/master/static.css"/></head>
 <body>
 <h2 id="-announcement-"><strong>ANNOUNCEMENT</strong></h2>
-<p>Move Your Axis and private dance instruction need to stay on hold until further notice.  At this point, it is entirely possible that this will become permanent.</p>
-<p>For those of you who were unaware, I was hit by a truck last summer while I was out running and sustained head to toe injuries.  After taking a financial break, I am back to visiting with my doctors again.  </p>
-<p>Unfortunately, we are only able to address two body parts at a time.  Recovery Road is looking to be pretty long and intense since my right foot was the only spared body part.  </p>
-<p>I will provide an update once things become more clear.  </p>
-<p>If I don’t have the opportunity to talk with you before the holiday, Happy 4th of July!</p>
+<p>I am currently unavailable until further notice.</p>
+<p>For those of you who were unaware, I was hit by a truck last summer while I was out running and sustained head to toe injuries.  </p>
+<p>Recovery Road is looking to be pretty long and intense since my right foot was the only spared body part.  </p>
+<p>I will provide an update once things become more clear.</p>
+<p>Should you need to reach me in the meantime, please contact info@tina-michelle.com.</p>
 </body>
 </html>
